{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 21,
  "lineage": "bfb6faa9-0363-b08e-9e21-db05c4c566c1",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "linux_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/4d2f3d90-3f7a-4f44-bb7f-bee999a3638b/resourceGroups/example_2_resources/providers/Microsoft.Network/networkInterfaces/linux-nic",
            "internal_domain_name_suffix": "fvtz2vllvwsejnqltryofm43pa.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.1.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/4d2f3d90-3f7a-4f44-bb7f-bee999a3638b/resourceGroups/example_2_resources/providers/Microsoft.Network/virtualNetworks/vnet-deployment/subnets/subnet2"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "mac_address": "60-45-BD-9D-B7-F7",
            "name": "linux-nic",
            "private_ip_address": "10.1.2.4",
            "private_ip_addresses": [
              "10.1.2.4"
            ],
            "resource_group_name": "example_2_resources",
            "virtual_machine_id": "/subscriptions/4d2f3d90-3f7a-4f44-bb7f-bee999a3638b/resourceGroups/example_2_resources/providers/Microsoft.Compute/virtualMachines/linux-vm"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.example_2",
            "azurerm_subnet.subnet2",
            "azurerm_virtual_network.example_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "windows_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/4d2f3d90-3f7a-4f44-bb7f-bee999a3638b/resourceGroups/example_1_resources/providers/Microsoft.Network/networkInterfaces/windows-nic",
            "internal_domain_name_suffix": "d5dwkgpndeuu1bbvndtzi1ncpd.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/4d2f3d90-3f7a-4f44-bb7f-bee999a3638b/resourceGroups/example_1_resources/providers/Microsoft.Network/virtualNetworks/vnet-production/subnets/subnet1"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "name": "windows-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "example_1_resources"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.example_1",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_network.example_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "example_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4d2f3d90-3f7a-4f44-bb7f-bee999a3638b/resourceGroups/example_1_resources/providers/Microsoft.Network/networkSecurityGroups/example_1_security_group",
            "location": "westeurope",
            "name": "example_1_security_group",
            "resource_group_name": "example_1_resources",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.example_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "example_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4d2f3d90-3f7a-4f44-bb7f-bee999a3638b/resourceGroups/example_2_resources/providers/Microsoft.Network/networkSecurityGroups/example_2_security_group",
            "location": "westeurope",
            "name": "example_2_security_group",
            "resource_group_name": "example_2_resources",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.example_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/4d2f3d90-3f7a-4f44-bb7f-bee999a3638b/resourceGroups/example_1_resources/providers/Microsoft.Network/virtualNetworks/vnet-production/subnets/subnet1",
            "name": "subnet1",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "example_1_resources",
            "virtual_network_name": "vnet-production"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.example_1",
            "azurerm_virtual_network.example_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/4d2f3d90-3f7a-4f44-bb7f-bee999a3638b/resourceGroups/example_2_resources/providers/Microsoft.Network/virtualNetworks/vnet-deployment/subnets/subnet2",
            "name": "subnet2",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "example_2_resources",
            "virtual_network_name": "vnet-deployment"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.example_2",
            "azurerm_virtual_network.example_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "example_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4d2f3d90-3f7a-4f44-bb7f-bee999a3638b/resourceGroups/example_1_resources/providers/Microsoft.Network/virtualNetworks/vnet-production/subnets/subnet1",
            "network_security_group_id": "/subscriptions/4d2f3d90-3f7a-4f44-bb7f-bee999a3638b/resourceGroups/example_1_resources/providers/Microsoft.Network/networkSecurityGroups/example_1_security_group",
            "subnet_id": "/subscriptions/4d2f3d90-3f7a-4f44-bb7f-bee999a3638b/resourceGroups/example_1_resources/providers/Microsoft.Network/virtualNetworks/vnet-production/subnets/subnet1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.example_1",
            "azurerm_resource_group.example_1",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_network.example_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "example_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4d2f3d90-3f7a-4f44-bb7f-bee999a3638b/resourceGroups/example_2_resources/providers/Microsoft.Network/virtualNetworks/vnet-deployment/subnets/subnet2",
            "network_security_group_id": "/subscriptions/4d2f3d90-3f7a-4f44-bb7f-bee999a3638b/resourceGroups/example_2_resources/providers/Microsoft.Network/networkSecurityGroups/example_2_security_group",
            "subnet_id": "/subscriptions/4d2f3d90-3f7a-4f44-bb7f-bee999a3638b/resourceGroups/example_2_resources/providers/Microsoft.Network/virtualNetworks/vnet-deployment/subnets/subnet2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.example_2",
            "azurerm_resource_group.example_2",
            "azurerm_subnet.subnet2",
            "azurerm_virtual_network.example_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "example_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "dns_servers": [
              "10.0.0.4",
              "10.0.0.5"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "1965c71f-19ed-4d29-8435-68e7946da27b",
            "id": "/subscriptions/4d2f3d90-3f7a-4f44-bb7f-bee999a3638b/resourceGroups/example_1_resources/providers/Microsoft.Network/virtualNetworks/vnet-production",
            "location": "westeurope",
            "name": "vnet-production",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "example_1_resources",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/4d2f3d90-3f7a-4f44-bb7f-bee999a3638b/resourceGroups/example_1_resources/providers/Microsoft.Network/virtualNetworks/vnet-production/subnets/subnet1",
                "name": "subnet1",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/4d2f3d90-3f7a-4f44-bb7f-bee999a3638b/resourceGroups/example_1_resources/providers/Microsoft.Network/networkSecurityGroups/example_1_security_group"
              }
            ],
            "tags": {
              "environment": "Production"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.example_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "example_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "dns_servers": [
              "10.0.0.4",
              "10.0.0.5"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "559e672d-ad6b-44a4-b60b-9c70e2b3dd78",
            "id": "/subscriptions/4d2f3d90-3f7a-4f44-bb7f-bee999a3638b/resourceGroups/example_2_resources/providers/Microsoft.Network/virtualNetworks/vnet-deployment",
            "location": "westeurope",
            "name": "vnet-deployment",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "example_2_resources",
            "subnet": [
              {
                "address_prefixes": [
                  "10.1.2.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/4d2f3d90-3f7a-4f44-bb7f-bee999a3638b/resourceGroups/example_2_resources/providers/Microsoft.Network/virtualNetworks/vnet-deployment/subnets/subnet2",
                "name": "subnet2",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/4d2f3d90-3f7a-4f44-bb7f-bee999a3638b/resourceGroups/example_2_resources/providers/Microsoft.Network/networkSecurityGroups/example_2_security_group"
              }
            ],
            "tags": {
              "environment": "Deployment"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.example_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "example_1_to_example_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/4d2f3d90-3f7a-4f44-bb7f-bee999a3638b/resourceGroups/example_1_resources/providers/Microsoft.Network/virtualNetworks/vnet-production/virtualNetworkPeerings/peer-example-1-to-2",
            "name": "peer-example-1-to-2",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/4d2f3d90-3f7a-4f44-bb7f-bee999a3638b/resourceGroups/example_2_resources/providers/Microsoft.Network/virtualNetworks/vnet-deployment",
            "resource_group_name": "example_1_resources",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-production"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.example_1",
            "azurerm_resource_group.example_2",
            "azurerm_virtual_network.example_1",
            "azurerm_virtual_network.example_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "example_2_to_example_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/4d2f3d90-3f7a-4f44-bb7f-bee999a3638b/resourceGroups/example_2_resources/providers/Microsoft.Network/virtualNetworks/vnet-deployment/virtualNetworkPeerings/peer-example-2-to-1",
            "name": "peer-example-2-to-1",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/4d2f3d90-3f7a-4f44-bb7f-bee999a3638b/resourceGroups/example_1_resources/providers/Microsoft.Network/virtualNetworks/vnet-production",
            "resource_group_name": "example_2_resources",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-deployment"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.example_1",
            "azurerm_resource_group.example_2",
            "azurerm_virtual_network.example_1",
            "azurerm_virtual_network.example_2"
          ]
        }
      ]
    }
  ]
}